A Rubbish Identification System

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
 {% block body %}
     <div>
         <div class='center'>
-            {#        <div class='title' style='font-size: 24px;'>垃圾检测分类系统</div>#}
-            <p style="font-size:20px;text-align:center;text-indent:2em;line-height:2em;">垃圾检测分类系统</p>
+            {#        <div class='title' style='font-size: 24px;'>图像识别</div>#}
+            <p style="font-size:20px;text-align:center;text-indent:2em;line-height:2em;">图像识别</p>
             <div class="show-box"> <!--展示的框-->
                 {% block showbox %}
                     <img id='image-picked' class='no-display' alt='Chosen Image' height='250'/>
