--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -75,10 +75,7 @@
     <header id="home">
         <nav id="nav-wrap">
             <ul id="nav" class="nav">
-                <!-- <li><a class="smoothscroll" href="/">图片识别</a></li> -->
-                <!-- <li><a class="smoothscroll" href="/realtime">实时检测</a></li>
-                <li><a class="smoothscroll" href="/architecture">系统架构</a></li>
-                <li><a class="smoothscroll" href="/about_me">DAO实验室</a></li> -->
+                <li><a class="smoothscroll" href="/">垃圾检测系统</a></li> 
             </ul> <!-- end #nav -->
         </nav> <!-- end #nav-wrap -->
     </header>
